--- a/arch/arm64/configs/emerald_defconfig
+++ b/arch/arm64/configs/emerald_defconfig
@@ -56,6 +56,7 @@ CONFIG_ARM_SCPI_PROTOCOL=y
 CONFIG_ARM64_CRYPTO=y
 CONFIG_CRYPTO_SHA2_ARM64_CE=y
 CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
+CONFIG_CONSOLE_LOGLEVEL_DEFAULT=4
 CONFIG_KPROBES=y
 CONFIG_BLK_INLINE_ENCRYPTION=y
 CONFIG_BLK_INLINE_ENCRYPTION_FALLBACK=y
