--- a/arch/arm64/configs/emerald_defconfig
+++ b/arch/arm64/configs/emerald_defconfig
@@ -1,5 +1,6 @@
 CONFIG_PREEMPT=y
 CONFIG_LOCALVERSION="-arcadia"
+CONFIG_HZ_300=y
 CONFIG_IKHEADERS=m
 CONFIG_LOG_BUF_SHIFT=19
 CONFIG_UCLAMP_TASK=y
