TEEI: Add Lite Microtrust driver
Change-Id: Ib7af7de227b6edeca190872a395eb8a2e9a524b1

--- a/drivers/tee/teei/Kconfig
+++ b/drivers/tee/teei/Kconfig
@@ -10,9 +10,21 @@
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 # GNU General Public License for more details.
 
+config MICROTRUST_TEE_LITE_SUPPORT
+	bool "Enable Microtrust TEEI LITE Support"
+	select VIRTIO
+	select GENERIC_ALLOCATOR
+	default n
+	---help---
+	  Enables the support of Microtrust TEE drivers for ARMv7.
+	  All Microtrust related TEE drivers will depend on this option.
+	  Say lite if you would like to enable this feature.
+	  If unsure, say N.
+
 config MICROTRUST_TEE_SUPPORT
 	bool "Enable Microtrust TEEI Support"
 	select DMA_SHARED_BUFFER
+	select VIRTIO
 	select GENERIC_ALLOCATOR
 	select MTK_TEE_SANITY
 	default n
@@ -24,7 +36,7 @@ config MICROTRUST_TEE_SUPPORT
 
 config MICROTRUST_TEE_VERSION
 	string "MICROTRUST TEE Version"
-	depends on MICROTRUST_TEE_SUPPORT
+	depends on MICROTRUST_TEE_SUPPORT || MICROTRUST_TEE_LITE_SUPPORT
 	default "300"
 	help
 	  Enables the support of Microtrust new version.
@@ -34,7 +46,7 @@ config MICROTRUST_TEE_VERSION
 
 config MICROTRUST_TZ_DRIVER
 	tristate "Microtrust TEEI Driver"
-	depends on MICROTRUST_TEE_SUPPORT
+	depends on MICROTRUST_TEE_SUPPORT || MICROTRUST_TEE_LITE_SUPPORT
 	default y
 	help
 	  Enables the support of Microtrust trustzone linux driver.
@@ -45,7 +57,7 @@ config MICROTRUST_TZ_DRIVER
 
 config MICROTRUST_DYNAMIC_CORE
 	tristate "Microtrust TEEI Dynamic Core"
-	depends on MICROTRUST_TEE_SUPPORT
+	depends on MICROTRUST_TEE_SUPPORT || MICROTRUST_TEE_LITE_SUPPORT
 	default y
 	help
 	  Enables the support of Microtrust trustzone linux driver.
@@ -79,7 +91,7 @@ config MICROTRUST_TZ_DRIVER_MTK_TRACING
 
 config MICROTRUST_VFS_DRIVER
 	tristate "Microtrust Virtual File System Driver"
-	depends on MICROTRUST_TEE_SUPPORT
+	depends on MICROTRUST_TEE_SUPPORT || MICROTRUST_TEE_LITE_SUPPORT
 	default y
 	help
 	  Enables the support of Microtrust virtual file system driver.
@@ -90,7 +102,7 @@ config MICROTRUST_VFS_DRIVER
 
 config MICROTRUST_FP_DRIVER
 	tristate "Microtrust Fingerprint Driver"
-	depends on MICROTRUST_TEE_SUPPORT
+	depends on MICROTRUST_TEE_SUPPORT || MICROTRUST_TEE_LITE_SUPPORT
 	default y
 	help
 	  Enables support of Microtrust fingerprint helper driver.
@@ -101,7 +113,7 @@ config MICROTRUST_FP_DRIVER
 
 config MICROTRUST_KEYMASTER_DRIVER
 	tristate "Microtrust keymaster Driver"
-	depends on MICROTRUST_TEE_SUPPORT
+	depends on MICROTRUST_TEE_SUPPORT || MICROTRUST_TEE_LITE_SUPPORT
 	default y
 	help
 	  Enables support of Microtrust keymaster helper driver.
@@ -112,7 +124,7 @@ config MICROTRUST_KEYMASTER_DRIVER
 
 config MICROTRUST_DEBUG
 	bool "Enable Microtrust Debug Message"
-	depends on MICROTRUST_TEE_SUPPORT
+	depends on MICROTRUST_TEE_SUPPORT || MICROTRUST_TEE_LITE_SUPPORT
 	default n
 	help
 	  Enable debug messages output from Microtrust Linux drivers.
@@ -122,7 +134,7 @@ config MICROTRUST_DEBUG
 
 config MICROTRUST_UNITTEST_SUPPORT
 	tristate "Microtrust Unittest Trigger Support"
-	depends on MICROTRUST_TEE_SUPPORT
+	depends on MICROTRUST_TEE_SUPPORT || MICROTRUST_TEE_LITE_SUPPORT
 	default n
 	help
 	  Enable Microtrust unittest trigger driver.
@@ -133,7 +145,7 @@ config MICROTRUST_UNITTEST_SUPPORT
 
 config MICROTRUST_TZ_LOG
 	bool "Enable Microtrust TrustZone logger"
-	depends on MICROTRUST_TEE_SUPPORT
+        depends on MICROTRUST_TEE_SUPPORT || MICROTRUST_TEE_LITE_SUPPORT
 	default n
 	help
 	  Enable Microtrust TrustZone logger to dump TEE logs in kernel log buffer.
@@ -144,7 +156,7 @@ config MICROTRUST_TZ_LOG
 
 config MICROTRUST_TEST_DRIVERS
 	tristate "Microtrust Test Drivers"
-	depends on MICROTRUST_TEE_SUPPORT
+	depends on MICROTRUST_TEE_SUPPORT || MICROTRUST_TEE_LITE_SUPPORT
 	default n
 	help
 	  Enables support of Microtrust test driver kernel framework.
@@ -154,7 +166,7 @@ config MICROTRUST_TEST_DRIVERS
 
 config MICROTRUST_TZDRIVER_DYNAMICAL_DEBUG
 	tristate "Microtrust tzdriver dynamical debug"
-	depends on MICROTRUST_TEE_SUPPORT
+	depends on MICROTRUST_TEE_SUPPORT || MICROTRUST_TEE_LITE_SUPPORT
 	default n
 	help
 	  Enables support of Microtrust test driver kernel framework.
