ARM64/defconfig: emerald: Enable and build exFAT.
Signed-off-by: Gagan Malvi <malvigagan@gmail.com>

--- a/arch/arm64/configs/emerald_defconfig
+++ b/arch/arm64/configs/emerald_defconfig
@@ -414,6 +414,7 @@ CONFIG_GENERIC_PHY=y
 CONFIG_RAS=y
 CONFIG_MTK_DEVINFO=y
 CONFIG_MT6359_EFUSE=y
+CONFIG_EXFAT_FS=y
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_SECURITY=y
 CONFIG_EXT4_ENCRYPTION=y
