--- a/arch/arm64/configs/emerald_defconfig
+++ b/arch/arm64/configs/emerald_defconfig
@@ -488,6 +488,7 @@ CONFIG_CRC_CCITT=y
 CONFIG_CRC8=y
 CONFIG_XZ_DEC=y
 CONFIG_PRINTK_TIME=y
+CONFIG_DISABLE_TRACE_PRINTK=y
 CONFIG_DEBUG_INFO=y
 # CONFIG_ENABLE_MUST_CHECK is not set
 CONFIG_FRAME_WARN=2800
