--- a/arch/arm64/configs/zirconia_defconfig
+++ b/arch/arm64/configs/zirconia_defconfig
@@ -138,8 +138,8 @@ CONFIG_MTK_CMDQ_V3=y
 CONFIG_MTK_SMI_EXT=y
 CONFIG_MTK_JPEG=y
 CONFIG_MTK_CCU=y
-CONFIG_MTK_CAM_SECURITY_SUPPORT=y
-CONFIG_MTK_CAM_GENIEZONE_SUPPORT=y
+# CONFIG_MTK_CAM_SECURITY_SUPPORT is not set
+# CONFIG_MTK_CAM_GENIEZONE_SUPPORT is not set
 CONFIG_MTK_SENSOR_SUPPORT=y
 CONFIG_MTK_SENSOR_ARCHITECTURE="1.0"
 CONFIG_CUSTOM_KERNEL_ACCELEROMETER=y
@@ -187,14 +187,8 @@ CONFIG_MTK_GPS_EMI=y
 CONFIG_MTK_FMRADIO=y
 CONFIG_MTK_FM_CHIP="MT6631_FM"
 CONFIG_MTK_CONNSYS_DEDICATED_LOG_PATH=y
-CONFIG_HAVE_MTK_ENABLE_GENIEZONE=y
-CONFIG_MTK_ENABLE_GENIEZONE=y
-CONFIG_MTK_GZ_MAIN=y
-CONFIG_MTK_GZ_LOG=y
-CONFIG_MTK_GZ_VIRTIO=y
-CONFIG_MTK_GZ_VIRTIO_IPC=y
-CONFIG_MTK_GZ_IRQ=y
-CONFIG_HAVE_MTK_GZ_LOG=y
+# CONFIG_HAVE_MTK_ENABLE_GENIEZONE is not set
+# CONFIG_MTK_ENABLE_GENIEZONE is not set
 # CONFIG_TCPC_CLASS is not set
 # CONFIG_TCPC_MT6370 is not set
 # CONFIG_USB_POWER_DELIVERY is not set
@@ -506,7 +500,7 @@ CONFIG_MTK_FINGERPRINT_SUPPORT=y
 CONFIG_MTK_GYROHUB=y
 
 CONFIG_SECURITY_SELINUX_DEVELOP=y
-CONFIG_MICROTRUST_TEE_SUPPORT=y
+CONFIG_MICROTRUST_TEE_LITE_SUPPORT=y
 CONFIG_TEE=y
 
 #NFC
