ARM64/configs: e4z4: Enable dtb(o) build config.
Signed-off-by: Gagan Malvi <malvigagan@gmail.com>

--- a/arch/arm64/configs/emerald_defconfig
+++ b/arch/arm64/configs/emerald_defconfig
@@ -36,6 +36,7 @@ CONFIG_PARAVIRT=y
 # CONFIG_ARM64_VHE is not set
 CONFIG_RANDOMIZE_BASE=y
 # CONFIG_EFI is not set
+CONFIG_BUILD_ARM64_DTB_OVERLAY_IMAGE=y
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES="mediatek/mt6765"
 CONFIG_BUILD_ARM64_DTB_OVERLAY_IMAGE_NAMES="mediatek/yk673v6_lwg62_64"
